fixes sticky section alignment

--- a/packages/cms/src/components/sections/Section.css
+++ b/packages/cms/src/components/sections/Section.css
@@ -65,6 +65,10 @@
           flex: 1 0 auto;
           width: auto;
           margin: 0 var(--gutter-lg) 0 0;
+
+          &:last-child {
+            margin-right: 0;
+          }
         }
 
         & * {
